<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_import_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.recognizer.classchecks.course.ImportTableActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay">
        <com.library.widget.CustomToolbar
            android:id="@+id/custom_toolbar_import_table"
            android:layout_width="match_parent"
            android:layout_height="@dimen/custom_toolbar_height">
        </com.library.widget.CustomToolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout style="@style/wrap_layout" >

        <LinearLayout style="@style/setting_item_layout_margin_bottom">
            <EditText
                android:id="@+id/et_teacher_jw_account"
                style="@style/login_edit_text_view_style"
                android:inputType="number"
                android:digits="@string/edit_text_allow_character_numeric"
                android:hint="@string/import_table_eduational_number" />
        </LinearLayout>

        <LinearLayout style="@style/setting_item_layout">
            <EditText
                android:id="@+id/et_teacher_jw_pwd"
                style="@style/login_edit_text_view_style"
                android:inputType="textPassword"
                android:hint="@string/import_table_eduational_pwd" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_import_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/btnStyle"
        android:layout_marginTop="@dimen/layout_margin_48dp"
        android:layout_marginLeft="@dimen/layout_margin_24dp"
        android:layout_marginRight="@dimen/layout_margin_24dp"
        android:background="@drawable/shade_green_bg_border_radius"
        android:text="@string/btn_import_table"
        android:textSize="@dimen/text_size_18sp"/>

</LinearLayout>
