<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_24dp"
        android:padding="@dimen/padding_3dp"
        android:layout_gravity="center"
        android:background="@drawable/rect_green_border_shade">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/default_headicon"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/layout_margin_36dp"
        android:layout_marginLeft="@dimen/layout_margin_32dp"
        android:layout_marginRight="@dimen/layout_margin_32dp">
        <RelativeLayout
            android:id="@+id/rl_user_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_green_bottom_shade">
            <ImageView
                android:id="@+id/iv_user_icon"
                style="@style/login_image_view_icon_style"
                android:src="@drawable/icon_login_user" />
            <View
                android:id="@+id/viewName"
                style="@style/login_vertical_line_style"
                android:layout_toRightOf="@id/iv_user_icon" />
            <EditText
                android:id="@+id/et_login_phone"
                style="@style/login_edit_text_view_style"
                android:inputType="phone|number"
                android:digits="@string/edit_text_allow_character_numeric"
                android:layout_toRightOf="@id/viewName"
                android:hint="@string/login_user_number" />
            <ImageView
                android:id="@+id/iv_user_clear"
                style="@style/login_image_view_clear_style" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_user_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_green_bottom_shade">

            <ImageView
                android:id="@+id/iv_pwd_icon"
                style="@style/login_image_view_icon_style"
                android:src="@drawable/icon_login_pwd" />
            <View
                android:id="@+id/view_pwd"
                style="@style/login_vertical_line_style"
                android:layout_toRightOf="@id/iv_pwd_icon" />
            <EditText
                android:id="@+id/et_login_sms_code"
                style="@style/login_edit_text_view_style"
                android:layout_toRightOf="@id/view_pwd"
                android:inputType="number"
                android:digits="@string/edit_text_allow_character_numeric"
                android:hint="@string/save_info_sms_code" />
            <Button
                android:id="@+id/btn_req_sms_code"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                style="@style/btnStyle"
                android:layout_centerVertical="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textSize="16sp"
                android:background="@drawable/shade_green_bg_border_radius"
                android:text="获取验证码"/>
            <ImageView
                android:id="@+id/iv_pwd_clear"
                style="@style/login_image_view_clear_style" />
        </RelativeLayout>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/btnStyle"
            android:layout_marginTop="@dimen/layout_margin_48dp"
            android:background="@drawable/shade_green_bg_border_radius"
            android:text="@string/btn_login"
            android:textSize="@dimen/text_size_18sp"/>
    </LinearLayout>

</LinearLayout>
